# sys-clk

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  Makefile  README.md  build.sh  config.ini.template
common/include/: sysclk.h
common/src/: apm_profile_table.c  clock_table.c
lib/: inih.h
lib/inih/: .gitignore  .gitrepo  .travis.yml  INIReaderTest.cpp  README.md  test.ini
lib/minIni/: .gitignore  .gitrepo  Makefile  README.md
manager/: .gitignore  Makefile  README.md  meson.build
manager/lib/borealis/: .clang-format  .gitattributes  .gitignore  .gitrepo  COPYING  Makefile  README.md  meson.build
manager/lib/borealis/example/: main.cpp  sample_installer_page.cpp  sample_loading_page.cpp
manager/lib/borealis/scripts/: format.sh
manager/src/: about_tab.cpp  about_tab.h  advanced_settings_tab.cpp  advanced_settings_tab.h  app_profile_frame.cpp  app_profile_frame.h  app_profiles_tab.cpp  app_profiles_tab.h  cheat_sheet_tab.cpp  cheat_sheet_tab.h  logo.cpp  logo.h  main.cpp  main_frame.cpp  main_frame.h  refresh_task.cpp  refresh_task.h  status_tab.cpp  status_tab.h  utils.cpp  utils.h
manager/src/ipc/: client.h  ipc.h  types.h
manager/src/ipc/pc_shim/: client.cpp  client.h  nacp.h  ns.cpp  ns.h  types.h
overlay/: Makefile
overlay/scripts/: make_logo.sh
overlay/src/: ipc.h  main.cpp
res/: config.ini.template  kip.json  sysmodule.json
src/: clock_manager.cpp  clock_manager.h  clock_table.h  clocks.cpp  clocks.h  config.cpp  config.h  errors.cpp  file_utils.cpp  file_utils.h  main.cpp  process_management.cpp  process_management.h
src/ipc/: apm_ext.c  apm_ext.h
sysmodule/: .gitignore  Makefile  perms.json
sysmodule/src/: board.cpp  board.h  clock_manager.cpp  clock_manager.h  clock_table.h  clocks.cpp  clocks.h  config.cpp  config.h  errors.cpp  errors.h  file_utils.cpp  file_utils.h  ipc_service.cpp  main.cpp  (+3 more)
(+94 files in other folders)
